--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,14 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
-		    <version>3.1.0</version>
+    		<version>4.0.1</version>
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -32,7 +33,7 @@
 		<dependency>
 		    <groupId>org.apache.tomcat</groupId>
 		    <artifactId>tomcat-juli</artifactId>
-		    <version>8.5.15</version>
+		    <version>9.0.20</version>
 		    <scope>provided</scope>
 		</dependency>
 
